crates/uitest/fixtures/name_resolution/type_alias_extra_args.snap
---
source: crates/hir-analysis/tests/name_resolution.rs
assertion_line: 48
expression: diagnostic_output
input_file: test_files/name_resolution/type_alias_extra_args.fe
---
error[2-0011]: incorrect number of generic arguments for `Alias`; expected 1, given 2
  ┌─ type_alias_extra_args.fe:5:16
  │
5 │ pub fn f(x: m::Alias<i32, u32>) {}
  │                ^^^^^ expected 1 arguments, but 2 were given

